--- a/bsconfig.json
+++ b/bsconfig.json
@@ -10,8 +10,8 @@
     "in-source": true
   },
   "suffix": ".bs.js",
-  "bs-dependencies": ["bs-express", "decco", "serbet"],
-  "ppx-flags": ["decco/ppx", "bs-let/ppx"],
+  "bs-dependencies": ["bs-express", "decco", "serbet", "bs-fetch"],
+  "ppx-flags": ["decco/ppx", "bs-let/ppx", "@baransu/graphql_ppx_re/ppx6"],
   "warnings": {
     "error": "+101"
   },
