--- a/package.json
+++ b/package.json
@@ -7,18 +7,31 @@
     "re:build": "bsb -make-world",
     "re:start": "bsb -make-world -w",
     "re:clean": "bsb -clean-world",
-    "start": "node ./src/Index.bs.js"
+    "start": "node ./src/index.js",
+    "watch": "nodemon ./src/index.js",
+    "generate-ppx-schema": "gqlschema https://api.thegraph.com/subgraphs/name/jasoons/always-for-sale-gallery -i -o graphql_schema.json"
   },
   "devDependencies": {
+    "@baransu/graphql_ppx_re": "^0.6.4",
     "bs-let": "^0.1.16",
     "bs-platform": "^7.1.1",
     "decco": "^1.1.1",
-    "gentype": "^3.12.0"
+    "dotenv": "^8.2.0",
+    "gentype": "^3.12.0",
+    "gql-tools": "^0.0.15",
+    "graphql": "^14.6.0",
+    "nodemon": "^2.0.2"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link-http": "^1.5.16",
+    "apollo-link-ws": "^1.0.19",
     "bs-express": "^1.0.1",
     "bs-fetch": "^0.5.1",
+    "graphql-tag": "^2.10.3",
     "isomorphic-fetch": "^2.2.1",
-    "serbet": "^0.4.0"
+    "serbet": "^0.4.0",
+    "subscriptions-transport-ws": "^0.9.16"
   }
 }
