Update schema and add websocket logs to try understand disconnection issues.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "re:build": "bsb -make-world",
     "re:start": "bsb -make-world -w",
+    "re:watch": "bsb -make-world -w",
     "re:clean": "bsb -clean-world",
     "start": "node ./src/index.js",
     "watch": "nodemon ./src/index.js",
