--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,5 +1,5 @@
 {
-  "name": "parcel-ownership-granter",
+  "name": "image-metadata-server",
   "version": "0.1.0",
   "sources": {
     "dir": "src",
@@ -10,8 +10,28 @@
     "in-source": true
   },
   "suffix": ".bs.js",
-  "bs-dependencies": ["bs-express", "decco", "serbet", "bs-fetch"],
-  "ppx-flags": ["decco/ppx", "bs-let/ppx", "@baransu/graphql_ppx_re/ppx6"],
+  "graphql": {
+    "apolloMode": true,
+    "extendMutation": "ApolloClient.GraphQL_PPX.ExtendMutation",
+    "extendQuery": "ApolloClient.GraphQL_PPX.ExtendQuery",
+    "extendSubscription": "ApolloClient.GraphQL_PPX.ExtendSubscription",
+    "templateTagReturnType": "ApolloClient.GraphQL_PPX.templateTagReturnType",
+    "templateTagImport": "gql",
+    "templateTagLocation": "@apollo/client"
+  },
+  "bs-dependencies": [
+    "bs-express",
+    "decco",
+    "serbet",
+    "bs-fetch",
+    "reason-apollo-client",
+    "@reasonml-community/graphql-ppx",
+  ],
+  "ppx-flags": [
+    "@reasonml-community/graphql-ppx/ppx",
+    "decco/ppx",
+    "bs-let/ppx"
+  ],
   "warnings": {
     "error": "+101"
   },
