--- a/package.json
+++ b/package.json
@@ -13,27 +13,26 @@
     "generate-ppx-schema": "gqlschema https://api.thegraph.com/subgraphs/name/jasoons/always-for-sale-gallery -i -o graphql_schema.json"
   },
   "devDependencies": {
-    "@baransu/graphql_ppx_re": "^0.6.4",
     "bs-let": "^0.1.16",
-    "bs-platform": "^7.1.1",
-    "decco": "^1.1.1",
+    "bs-platform": "^8.3.3",
+    "decco": "^1.3.0",
     "dotenv": "^8.2.0",
-    "gentype": "^3.12.0",
+    "gentype": "^3.38.0",
     "gql-tools": "^0.0.15",
-    "graphql": "^14.6.0",
-    "nodemon": "^2.0.2"
+    "graphql": "^15.4.0",
+    "nodemon": "^2.0.6",
+    "reason-react": "^0.9.1"
   },
   "dependencies": {
-    "3box": "^1.17.1",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.8",
-    "apollo-link-http": "^1.5.16",
-    "apollo-link-ws": "^1.0.19",
-    "bs-express": "^1.0.1",
-    "bs-fetch": "^0.5.1",
-    "graphql-tag": "^2.10.3",
-    "isomorphic-fetch": "^2.2.1",
+    "3box": "^1.22.2",
+    "@apollo/client": "^3.2.5",
+    "@reasonml-community/graphql-ppx": "^1.0.1",
+    "bs-express": "^1.0.2",
+    "bs-fetch": "^0.6.2",
+    "graphql-tag": "^2.11.0",
+    "isomorphic-fetch": "^3.0.0",
+    "reason-apollo-client": "^1.0.0-beta.1",
     "serbet": "^0.4.0",
-    "subscriptions-transport-ws": "^0.9.16"
+    "subscriptions-transport-ws": "^0.9.18"
   }
 }
